test_data/Xml/Unexpected/Unserializable/InvalidClassName/qualifier/wrong.xml.exception
Expected an element representing an instance of class Qualifier with element name qualifier, but got: utterlyInvalid at: the beginning